Firebase Integration and verification

--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
 # VITE_API_BASE_URL=https://api.internmatch.in
 VITE_API_BASE_URL=http://localhost:5000
+
+# Firebase Configuration (public - safe to expose)
+VITE_FIREBASE_API_KEY=AIzaSyBZEO2NQNlt-Ny4SfIfI6Zd7TnMtAKvP_c
+VITE_FIREBASE_AUTH_DOMAIN=internmatch-auth.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=internmatch-auth
+VITE_FIREBASE_STORAGE_BUCKET=internmatch-auth.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=4223581864
+VITE_FIREBASE_APP_ID=1:4223581864:web:c765a28c908be723010c9d
